[project]
name = "AS_SKILLS"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentscope>=0.0.1",
    "beautifulsoup4>=4.11.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "matplotlib>=3.6.0",
    "mypy>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "pdfplumber>=0.9.0",
    "pypdf2>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "scrapy>=2.7.0",
    "seaborn>=0.12.0",
    "selenium>=4.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
